fix: fixed handsontable big z-index, so it doesnt cover up  data picker component

--- a/src/style.scss
+++ b/src/style.scss
@@ -96,6 +96,11 @@ gh-study-journal {
 		}
 	}
 
+	.journal-table {
+		position: relative;
+		z-index: 0;
+	}
+
 	.handsontable {
 		font-size: inherit;
 
